--- a/index.html
+++ b/index.html
@@ -53,9 +53,176 @@
             }
 
             actualRender() {
-                // Your existing render code here (same as in your original)
                 this.shadowRoot.innerHTML = `
-                    <!-- Your existing styles and HTML -->
+                <style>
+                * {
+                    font-family: 'Inter', sans-serif;
+                    box-sizing: border-box;
+                }
+
+                .widget-container {
+                    background: rgba(17, 25, 40, 0.85);
+                    backdrop-filter: blur(16px);
+                    border: 1px solid rgba(79, 91, 133, 0.4);
+                    border-radius: 1.5rem;
+                    padding: 1rem;
+                    width: 100%;
+                    max-width: 480px;
+                    position: relative;
+                    box-shadow: 0 25px 50px -12px rgba(0,0,0,0.25);
+                    overflow: hidden;
+                }
+
+                .value-display {
+                    font-size: clamp(2rem, 5vw, 3.5rem);
+                    font-weight: 600;
+                    background: linear-gradient(45deg, #60a5fa, #818cf8);
+                    -webkit-background-clip: text;
+                    background-clip: text;
+                    color: transparent;
+                    letter-spacing: -0.05em;
+                    margin: 0.5rem 0;
+                    text-align: center;
+                }
+
+                .status-indicator {
+                    display: flex;
+                    align-items: center;
+                    gap: 0.75rem;
+                    font-size: 0.875rem;
+                    color: #bfdbfe;
+                    font-weight: 500;
+                    justify-content: center;
+                }
+
+                .live-dot {
+                    width: 10px;
+                    height: 10px;
+                    background: #3b82f6;
+                    border-radius: 50%;
+                    animation: pulse 1.5s infinite;
+                }
+
+                @keyframes pulse {
+                    0%, 100% { opacity: 1; }
+                    50% { opacity: 0.3; }
+                }
+
+                .settings-button {
+                    position: absolute;
+                    top: 1rem;
+                    right: 1rem;
+                    padding: 0.5rem;
+                    border-radius: 0.75rem;
+                    background: rgba(30, 41, 59, 0.5);
+                    border: 1px solid rgba(99, 102, 241, 0.3);
+                    transition: all 0.2s ease;
+                    cursor: pointer;
+                }
+
+                .settings-button:hover {
+                    background: rgba(30, 41, 59, 0.7);
+                    border-color: rgba(99, 102, 241, 0.5);
+                }
+
+                .modal-overlay {
+                    position: fixed;
+                    inset: 0;
+                    background: rgba(0, 0, 0, 0.6);
+                    backdrop-filter: blur(4px);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    z-index: 50;
+                }
+
+                .modal-content {
+                    background: rgba(17, 25, 40, 0.9);
+                    border-radius: 1.5rem;
+                    padding: 2rem;
+                    max-width: 480px;
+                    width: 100%;
+                    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+                }
+
+                .modal-header {
+                    font-size: 1.25rem;
+                    font-weight: 600;
+                    margin-bottom: 1rem;
+                    color: #ffffff;
+                }
+
+                .modal-input {
+                    width: 100%;
+                    background: rgba(31, 41, 55, 0.6);
+                    border: 1px solid rgba(99, 102, 241, 0.3);
+                    border-radius: 0.75rem;
+                    padding: 0.75rem;
+                    margin-bottom: 1.5rem;
+                    color: #ffffff;
+                    font-size: 1rem;
+                }
+
+                .modal-button {
+                    width: 100%;
+                    padding: 0.75rem;
+                    background: linear-gradient(45deg, #60a5fa, #818cf8);
+                    border: none;
+                    border-radius: 0.75rem;
+                    color: white;
+                    font-weight: 600;
+                    transition: opacity 0.3s ease;
+                    cursor: pointer;
+                }
+
+                .modal-button:hover {
+                    opacity: 0.9;
+                }
+
+                .embed-url {
+                    display: block;
+                    color: #ffffff;
+                    word-break: break-all;
+                    font-size: 0.85rem;
+                    background: rgba(31, 41, 55, 0.6);
+                    padding: 0.75rem;
+                    border-radius: 0.5rem;
+                    margin-top: 0.5rem;
+                }
+
+                .error-text {
+                    color: #ef4444;
+                    font-size: 0.875rem;
+                    margin-top: 0.5rem;
+                    text-align: center;
+                }
+
+                .mt-4 { margin-top: 1rem; }
+                .pt-4 { padding-top: 1rem; }
+                .text-sm { font-size: 0.875rem; }
+                .text-gray-400 { color: #9ca3af; }
+                .border-t { border-top-width: 1px; }
+                .border-gray-800\/50 { border-color: rgba(31, 41, 55, 0.5); }
+                </style>
+
+                <div class="widget-container">
+                    <button class="settings-button" aria-label="Configure widget">⚙️</button>
+                    <div class="flex flex-col items-center">
+                        <div class="value-display" aria-live="polite">
+                            ${this.getDisplayContent()}
+                        </div>
+                        <div class="status-indicator">
+                            <div class="live-dot"></div>
+                            <span>LIVE VIEW COUNT</span>
+                        </div>
+                        ${this.state.error ? `
+                        <div class="error-text">
+                            ${this.state.error}
+                        </div>
+                        ` : ''}
+                    </div>
+                </div>
+                ${this.state.modalOpen ? this.renderModal() : ''}
                 `;
             }
 
@@ -66,15 +233,52 @@
             }
 
             async initDataLoading() {
-                // Your existing initDataLoading code
+                try {
+                    this.state.loading = true;
+                    this.state.error = null;
+                    this.render();
+
+                    await this.validateSheetUrl(this.state.sheetUrl);
+                    const data = await this.fetchSheetData();
+
+                    this.state.lastValue = data;
+                } catch (error) {
+                    this.state.error = error.message;
+                    console.error('Widget Error:', error);
+                } finally {
+                    this.state.loading = false;
+                    this.render();
+                }
             }
 
             async validateSheetUrl(url) {
-                // Your existing validateSheetUrl code
+                const sheetPattern = /^https:\/\/docs\.google\.com\/spreadsheets\/d\/.+\/pubhtml/;
+                if (!sheetPattern.test(url)) {
+                    throw new Error('Invalid Google Sheets URL format');
+                }
             }
 
             async fetchSheetData() {
-                // Your existing fetchSheetData code
+                const proxy = 'https://api.allorigins.win/get?url=';
+                const encodedUrl = encodeURIComponent(this.state.sheetUrl);
+                const response = await fetch(`${proxy}${encodedUrl}`);
+
+                if (!response.ok) throw new Error('Network request failed');
+
+                const { contents } = await response.json();
+                const doc = new DOMParser().parseFromString(contents, 'text/html');
+
+                const cells = doc.querySelectorAll('td.s0, td.s1');
+                if (!cells.length) throw new Error('No numeric cells found');
+
+                const total = Array.from(cells).reduce((sum, cell) => {
+                    const value = parseInt(cell.textContent.replace(/\D/g, ''), 10);
+                    return sum + (isNaN(value) ? 0 : value);
+                }, 0);
+
+                if (total === 0) throw new Error('All cells contain non-numeric values');
+
+                return total;
             }
 
             toggleModal() {
