--- a/index.html
+++ b/index.html
@@ -259,33 +259,46 @@
             }
 
  async fetchSheetData() {
-    // Using cors.sh as a more reliable proxy
-    const proxy = 'https://cors.sh/';
-    const encodedUrl = encodeURIComponent(this.state.sheetUrl);
-    const response = await fetch(`${proxy}${encodedUrl}`, {
-        headers: {
-            'x-cors-api-key': 'temp_f90775473ba27bad989eba3397c67049', // Free API key for testing
+    try {
+        const proxy = 'https://api.allorigins.win/get?url=';
+        const encodedUrl = encodeURIComponent(this.state.sheetUrl);
+        const proxyUrl = `${proxy}${encodedUrl}`;
+
+        console.log('Fetching from proxy:', proxyUrl);
+
+        const response = await fetch(proxyUrl);
+
+        if (!response.ok) {
+            throw new Error(`Network error: ${response.status} ${response.statusText}`);
         }
-    });
 
-    if (!response.ok) throw new Error('Network request failed');
+        const { contents } = await response.json();
+        console.log('Proxy response contents:', contents); // Inspect this in the browser console
 
-    const text = await response.text();
-    const doc = new DOMParser().parseFromString(text, 'text/html');
+        const doc = new DOMParser().parseFromString(contents, 'text/html');
+        const cells = doc.querySelectorAll('td.s0, td.s1');
 
-    const cells = doc.querySelectorAll('td.s0, td.s1');
-    if (!cells.length) throw new Error('No numeric cells found');
+        if (!cells.length) {
+            throw new Error('No numeric cells found in the sheet');
+        }
 
-    const total = Array.from(cells).reduce((sum, cell) => {
-        const value = parseInt(cell.textContent.replace(/\D/g, ''), 10);
-        return sum + (isNaN(value) ? 0 : value);
-    }, 0);
+        const total = Array.from(cells).reduce((sum, cell) => {
+            const value = parseInt(cell.textContent.replace(/\D/g, ''), 10);
+            return sum + (isNaN(value) ? 0 : value);
+        }, 0);
 
-    if (total === 0) throw new Error('All cells contain non-numeric values');
+        if (total === 0) {
+            throw new Error('All cells contain non-numeric values');
+        }
 
-    return total;
+        return total;
+    } catch (error) {
+        console.error('Fetch error:', error.message);
+        this.state.error = error.message;
+        this.render();
+        throw error;
+    }
 }
-
             toggleModal() {
                 this.state.modalOpen = !this.state.modalOpen;
                 this.render();
