--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                     }
                 }
                 this.render();
-                if (this.state.sheetUrl) this.initDataLoading();
+                if (this.state.sheetUrl) {
+                    this.initDataLoading();
+                    this.startLiveUpdates(); // Start live updates
+                }
             }
 
             render() {
@@ -258,47 +261,36 @@
                 }
             }
 
- async fetchSheetData() {
-    try {
-        const proxy = 'https://api.allorigins.win/get?url=';
-        const encodedUrl = encodeURIComponent(this.state.sheetUrl);
-        const proxyUrl = `${proxy}${encodedUrl}`;
+            async fetchSheetData() {
+                const proxy = 'https://api.allorigins.win/get?url=';
+                const encodedUrl = encodeURIComponent(this.state.sheetUrl);
+                const response = await fetch(`${proxy}${encodedUrl}`);
 
-        console.log('Fetching from proxy:', proxyUrl);
+                if (!response.ok) {
+                    throw new Error(`Network request failed: ${response.status} ${response.statusText}`);
+                }
 
-        const response = await fetch(proxyUrl);
+                const { contents } = await response.json();
+                console.log('Fetched contents:', contents);
 
-        if (!response.ok) {
-            throw new Error(`Network error: ${response.status} ${response.statusText}`);
-        }
+                const doc = new DOMParser().parseFromString(contents, 'text/html');
 
-        const { contents } = await response.json();
-        console.log('Proxy response contents:', contents); // Inspect this in the browser console
+                // Extract the value from the second cell (<td class="s1">)
+                const secondCell = doc.querySelector('td.s1');
+                if (!secondCell) {
+                    throw new Error('Second cell not found in the sheet');
+                }
 
-        const doc = new DOMParser().parseFromString(contents, 'text/html');
-        const cells = doc.querySelectorAll('td.s0, td.s1');
+                const rawValue = secondCell.textContent.trim();
+                const parsedValue = parseInt(rawValue.replace(/,/g, ''), 10);
 
-        if (!cells.length) {
-            throw new Error('No numeric cells found in the sheet');
-        }
+                if (isNaN(parsedValue)) {
+                    throw new Error('Invalid numeric value in the second cell');
+                }
 
-        const total = Array.from(cells).reduce((sum, cell) => {
-            const value = parseInt(cell.textContent.replace(/\D/g, ''), 10);
-            return sum + (isNaN(value) ? 0 : value);
-        }, 0);
+                return parsedValue;
+            }
 
-        if (total === 0) {
-            throw new Error('All cells contain non-numeric values');
-        }
-
-        return total;
-    } catch (error) {
-        console.error('Fetch error:', error.message);
-        this.state.error = error.message;
-        this.render();
-        throw error;
-    }
-}
             toggleModal() {
                 this.state.modalOpen = !this.state.modalOpen;
                 this.render();
@@ -353,6 +345,24 @@
                 } catch (error) {
                     alert(error.message);
                 }
+            }
+
+            startLiveUpdates(interval = 5000) {
+                this.updateInterval = setInterval(async () => {
+                    try {
+                        const data = await this.fetchSheetData();
+                        this.state.lastValue = data;
+                        this.render();
+                    } catch (error) {
+                        console.error('Live update error:', error.message);
+                        this.state.error = error.message;
+                        this.render();
+                    }
+                }, interval);
+            }
+
+            disconnectedCallback() {
+                if (this.updateInterval) clearInterval(this.updateInterval);
             }
         }
 
