--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
-<body class="bg-[#030712] min-h-screen grid place-items-center p-4">
+<body class="bg-[rgb(3 7 18 / 0%);] min-h-screen grid place-items-center p-4">
     <live-view-widget class="w-full max-w-md"></live-view-widget>
     <script>
         class LiveViewWidget extends HTMLElement {
